modules/gdscript/tests/scripts/analyzer/errors/access_level_internal_func_outside.gd
@private

class Foo:
    internal func foo():
        pass

func test():
    Foo.new().foo()
